--- a/templates/display_topics.html
+++ b/templates/display_topics.html
@@ -8,20 +8,35 @@
 </head>
 <body>
     <center>
-        <table>
+        <h1>display_topics</h1>
+        <table border="3px">
             <tr>
                 <th>topic_name</th>
             </tr>
-         {% for i in topics %}
+        {% for i in topics %}
             <tr>
                 <td>{{i.topic_name}}</td>
             </tr>
 
         {% endfor %}
 
+
         </table>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </center>
-    
 </body>
 </html>
